--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -54,6 +54,7 @@ allow 107.189.13.254;
 allow 107.189.14.4;
 allow 107.189.14.43;
 allow 107.189.1.9;
+allow 107.189.2.108;
 allow 107.189.29.184;
 allow 107.189.30.236;
 allow 107.189.30.49;
@@ -106,6 +107,7 @@ allow 118.163.74.160;
 allow 121.78.28.166;
 allow 123.253.35.32;
 allow 124.198.131.108;
+allow 124.198.131.114;
 allow 124.198.131.223;
 allow 124.198.131.253;
 allow 124.198.131.29;
@@ -578,6 +580,12 @@ allow 195.47.238.176;
 allow 195.47.238.177;
 allow 195.47.238.178;
 allow 195.47.238.44;
+allow 195.47.238.82;
+allow 195.47.238.83;
+allow 195.47.238.84;
+allow 195.47.238.86;
+allow 195.47.238.87;
+allow 195.47.238.88;
 allow 195.47.238.90;
 allow 195.47.238.91;
 allow 195.47.238.92;
@@ -874,7 +882,6 @@ allow 23.129.64.224;
 allow 23.129.64.225;
 allow 23.129.64.99;
 allow 23.137.248.100;
-allow 23.137.253.109;
 allow 23.137.253.254;
 allow 23.137.253.27;
 allow 23.137.254.244;
@@ -900,9 +907,13 @@ allow 23.191.200.23;
 allow 23.191.200.24;
 allow 23.191.200.25;
 allow 23.191.200.26;
+allow 23.191.200.27;
+allow 23.191.200.28;
+allow 23.191.200.29;
 allow 23.191.200.3;
 allow 23.191.200.30;
 allow 23.191.200.31;
+allow 23.191.200.4;
 allow 23.191.200.5;
 allow 23.191.200.6;
 allow 23.191.200.7;
@@ -950,7 +961,6 @@ allow 2602:fa8a:3:a::a;
 allow 2602:fc24:10:bb36::1;
 allow 2602:fc24:12:81a6::1;
 allow 2602:fc24:18:f38f::1;
-allow 2602:fc24:19:1c9::1;
 allow 2602:fc24:19:524::1;
 allow 2602:fc24:19:eb06::dead;
 allow 2602:fccf:100:3::14;
@@ -1211,8 +1221,8 @@ allow 2a04:52c0:101:46a::;
 allow 2a04:52c0:102:46e0::1;
 allow 2a04:52c0:103:412::1;
 allow 2a04:52c0:103:5acd::1;
-allow 2a04:52c0:104:4735::1;
 allow 2a04:52c0:104:ad97::1;
+allow 2a04:52c0:105:d7eb::1;
 allow 2a04:52c0:106:394:e813:c39a:9eb9:d95b;
 allow 2a04:52c0:106:d219::1;
 allow 2a04:52c0:108:a34f::1;
@@ -1256,7 +1266,6 @@ allow 2a09:2dc2:0:5963::;
 allow 2a09:61c0::20;
 allow 2a09:61c0::21;
 allow 2a09:61c0::22;
-allow 2a09:61c0::beef;
 allow 2a0a:4cc0:2000:cd4c::12;
 allow 2a0a:4cc0:40:91b:7425:2eff:fec8:5578;
 allow 2a0a:4cc0:c1:12a1:58f9:e7ff:fe0b:b0f1;
@@ -1390,7 +1399,13 @@ allow 2a0c:4d00:2:8::2;
 allow 2a0c:5700:3133:1705:be24:11ff:fe0f:9e53;
 allow 2a0c:5700:3133:1705:be24:11ff:fe37:3cb;
 allow 2a0c:5700:3133:1705:be24:11ff:fe4e:df9e;
+allow 2a0c:5700:3133:1705:be24:11ff:fe58:9714;
 allow 2a0c:5700:3133:1705:be24:11ff:fe87:1bec;
+allow 2a0c:5700:3133:1705:be24:11ff:feb6:9942;
+allow 2a0c:5700:3133:1705:be24:11ff:fed0:6ed4;
+allow 2a0c:5700:3133:1705:be24:11ff:fed1:b9d9;
+allow 2a0c:5700:3133:1705:be24:11ff:fee1:73d9;
+allow 2a0c:5700:3133:1705:be24:11ff:fef5:7c39;
 allow 2a0c:5700:3133:4000:be24:11ff:fe07:68d;
 allow 2a0c:5700:3133:4000:be24:11ff:fe3c:6727;
 allow 2a0c:5700:3133:4000:be24:11ff:fe51:a829;
@@ -1478,6 +1493,7 @@ allow 2a10:c800:1:9cc6::1;
 allow 2a10:c800:1:f7f8:0:1ce:1ce:babe;
 allow 2a11:6100:0:12:a236:9fff:fe9e:36ea;
 allow 2a12:a800:11:1:124:198:131:108;
+allow 2a12:a800:11:1:124:198:131:114;
 allow 2a12:a800:11:1:124:198:131:223;
 allow 2a12:a800:11:1:124:198:131:253;
 allow 2a12:a800:11:1:124:198:131:29;
@@ -1708,6 +1724,7 @@ allow 51.81.222.62;
 allow 51.91.18.151;
 allow 5.196.95.34;
 allow 5.253.247.27;
+allow 5.255.100.26;
 allow 5.255.101.10;
 allow 5.255.101.131;
 allow 5.255.103.235;
@@ -1726,11 +1743,11 @@ allow 5.255.97.221;
 allow 5.255.98.151;
 allow 5.255.98.198;
 allow 5.255.98.23;
-allow 5.255.99.147;
 allow 5.255.99.5;
 allow 5.2.67.226;
 allow 5.2.72.110;
 allow 5.2.79.190;
+allow 5.34.182.203;
 allow 54.36.101.21;
 allow 54.36.108.162;
 allow 5.45.102.93;
