--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -906,11 +906,11 @@ allow 23.191.200.23;
 allow 23.191.200.24;
 allow 23.191.200.25;
 allow 23.191.200.26;
-allow 23.191.200.28;
-allow 23.191.200.29;
+allow 23.191.200.27;
 allow 23.191.200.3;
 allow 23.191.200.30;
 allow 23.191.200.31;
+allow 23.191.200.4;
 allow 23.191.200.5;
 allow 23.191.200.6;
 allow 23.191.200.7;
@@ -1263,6 +1263,7 @@ allow 2a09:2dc2:0:5963::;
 allow 2a09:61c0::20;
 allow 2a09:61c0::21;
 allow 2a09:61c0::22;
+allow 2a09:61c0::beef;
 allow 2a0a:4cc0:2000:cd4c::12;
 allow 2a0a:4cc0:40:91b:7425:2eff:fec8:5578;
 allow 2a0a:4cc0:c1:12a1:58f9:e7ff:fe0b:b0f1;
