--- a/allow-tor_ips_v6.conf
+++ b/allow-tor_ips_v6.conf
@@ -453,6 +453,7 @@ allow 2a09:2dc2:0:5963::;
 allow 2a09:61c0::20;
 allow 2a09:61c0::21;
 allow 2a09:61c0::22;
+allow 2a09:61c0::beef;
 allow 2a0a:4cc0:2000:cd4c::12;
 allow 2a0a:4cc0:40:91b:7425:2eff:fec8:5578;
 allow 2a0a:4cc0:c1:12a1:58f9:e7ff:fe0b:b0f1;
