--- a/deny-tor_ips.conf
+++ b/deny-tor_ips.conf
@@ -906,11 +906,11 @@ deny 23.191.200.23;
 deny 23.191.200.24;
 deny 23.191.200.25;
 deny 23.191.200.26;
-deny 23.191.200.28;
-deny 23.191.200.29;
+deny 23.191.200.27;
 deny 23.191.200.3;
 deny 23.191.200.30;
 deny 23.191.200.31;
+deny 23.191.200.4;
 deny 23.191.200.5;
 deny 23.191.200.6;
 deny 23.191.200.7;
@@ -1263,6 +1263,7 @@ deny 2a09:2dc2:0:5963::;
 deny 2a09:61c0::20;
 deny 2a09:61c0::21;
 deny 2a09:61c0::22;
+deny 2a09:61c0::beef;
 deny 2a0a:4cc0:2000:cd4c::12;
 deny 2a0a:4cc0:40:91b:7425:2eff:fec8:5578;
 deny 2a0a:4cc0:c1:12a1:58f9:e7ff:fe0b:b0f1;
