--- a/deny-tor_ips_v6.conf
+++ b/deny-tor_ips_v6.conf
@@ -149,6 +149,7 @@ deny 2602:fa8a:3:a::a;
 deny 2602:fc24:10:bb36::1;
 deny 2602:fc24:12:81a6::1;
 deny 2602:fc24:18:f38f::1;
+deny 2602:fc24:19:1c9::1;
 deny 2602:fc24:19:524::1;
 deny 2602:fc24:19:eb06::dead;
 deny 2602:fccf:100:3::14;
@@ -409,7 +410,6 @@ deny 2a04:52c0:102:46e0::1;
 deny 2a04:52c0:103:412::1;
 deny 2a04:52c0:103:5acd::1;
 deny 2a04:52c0:104:ad97::1;
-deny 2a04:52c0:105:d7eb::1;
 deny 2a04:52c0:106:394:e813:c39a:9eb9:d95b;
 deny 2a04:52c0:106:d219::1;
 deny 2a04:52c0:108:a34f::1;
@@ -419,7 +419,6 @@ deny 2a04:52c0:123:5ccf:50ef:cafe:babe:1337;
 deny 2a04:52c0:123:c6c3::1;
 deny 2a04:52c0:128:c6e7:50ef:cafe:babe:1337;
 deny 2a04:52c0:130:896e::1;
-deny 2a04:9dc0:31::c0cc:4d;
 deny 2a05:541:110:20::1;
 deny 2a05:541:110:3e::1;
 deny 2a05:541:112:31::1;
