--- a/deny-tor_ips.conf
+++ b/deny-tor_ips.conf
@@ -202,6 +202,7 @@ deny 173.237.206.68;
 deny 173.255.198.243;
 deny 176.118.193.33;
 deny 176.121.81.51;
+deny 176.58.121.177;
 deny 176.58.89.182;
 deny 176.65.134.4;
 deny 176.65.140.210;
@@ -906,8 +907,10 @@ deny 23.191.200.24;
 deny 23.191.200.25;
 deny 23.191.200.26;
 deny 23.191.200.27;
+deny 23.191.200.28;
 deny 23.191.200.29;
 deny 23.191.200.3;
+deny 23.191.200.30;
 deny 23.191.200.31;
 deny 23.191.200.4;
 deny 23.191.200.5;
@@ -1165,6 +1168,7 @@ deny 2a01:270:9847::1;
 deny 2a01:5e0:36:c311::1;
 deny 2a01:5e0:36:cf2a::1;
 deny 2a01:6340:2:501::10;
+deny 2a01:7e00::f03c:91ff:fe78:b382;
 deny 2a02:16d0:0:5::1;
 deny 2a02:418:6017::147;
 deny 2a02:418:6017::148;
@@ -1226,6 +1230,7 @@ deny 2a04:52c0:123:5ccf:50ef:cafe:babe:1337;
 deny 2a04:52c0:123:c6c3::1;
 deny 2a04:52c0:128:c6e7:50ef:cafe:babe:1337;
 deny 2a04:52c0:130:896e::1;
+deny 2a04:9dc0:31::c0cc:4d;
 deny 2a05:541:110:20::1;
 deny 2a05:541:110:3e::1;
 deny 2a05:541:112:31::1;
@@ -1808,6 +1813,7 @@ deny 82.221.139.190;
 deny 83.147.17.190;
 deny 83.217.9.73;
 deny 83.96.213.63;
+deny 83.97.20.77;
 deny 84.16.224.227;
 deny 84.19.182.20;
 deny 84.211.224.201;
